...
    /// Navigation texts such as button labels for 'cancel', 'done'
    enum Navigation {
        static let cancel = NSLocalizedString("NavigationCancel", comment: "Cancel")
        static let done = NSLocalizedString("NavigationDone", comment: "Done")
        static let backToMain = NSLocalizedString("NavigationMain", comment: "Main")
...
        static let userDefaultsKey = "FirstLaunch"
        
        static let fortTitle = NSLocalizedString("OnboardingScreenFortTitle", comment: "Fort Satellite")
        static let fortContent = NSLocalizedString("OnboardingScreenFortContent", comment: "An app for viewing the item shop, statistics and much more.")
        static let videoTitle = NSLocalizedString("OnboardingScreenVideoTitle", comment: "Preview")
...
        static let iconContent = NSLocalizedString("OnboardingScreenIconContent", comment: "With iOS 18, a specific icon theme will now be displayed.")
        
        static let skip = NSLocalizedString("OnboardingScreenSkipButton", comment: "Skip")
        static let next = NSLocalizedString("OnboardingScreenNextPageButton", comment: "Next page")
        static let started = NSLocalizedString("OnboardingScreenStartedButton", comment: "Get started")
    }
    
...
        /// Button labels for the main screen buttons
        enum MainButtons {
            static let shop = NSLocalizedString("MainButtonsShop", comment: "Item Shop")
            static let bundles = NSLocalizedString("MainButtonsBundles", comment: "Bundles")
            static let battlePass = NSLocalizedString("MainButtonsBP", comment: "Battle Pass")
            static let lootDetails = NSLocalizedString("MainButtonsArmory", comment: "Armory")
            static let crew = NSLocalizedString("MainButtonsCrew", comment: "Crew")
            static let map = NSLocalizedString("MainButtonsMap", comment: "Map")
            static let favourites = NSLocalizedString("MainButtonsFavourites", comment: "Favourites")
            static let stats = NSLocalizedString("MainButtonsStats", comment: "Stats")
            static let augments = NSLocalizedString("MainButtonsAugments", comment: "Augments")
            static let settings = NSLocalizedString("MainButtonsSettings", comment: "Settings")
...
        static let segmentName = NSLocalizedString("ShopPageSegmentName", comment: "Segment name...")
        static let allMenu = NSLocalizedString("ShopPageAllMenu", comment: "All")
        static let rotaionTitle = NSLocalizedString("ShopPageShopInfo", comment: "Shop Info")
        static let reloadShop = NSLocalizedString("ShopPageReloadShop", comment: "It's time to update!")
        static let remaining = NSLocalizedString("ShopPageRemaining", comment: "Remaining time")
        static let jamTracks = NSLocalizedString("ShopPageJamTracks", comment: "Jam Tracks")
        static let backpack = NSLocalizedString("ShopPageShopBackpack", comment: "Backpack")
...
        static let swipeInfo = NSLocalizedString("ShopTimerSwipeInfo", comment: "Swipe over the cell image to see more variations!")
        static let countInfo = NSLocalizedString("ShopTimerCountInfo", comment: "Number of elements in the item bundle.")
        static let aboutRotation = NSLocalizedString("ShopTimerAboutRotation", comment: "About rotation")
        static let rotationInfo = NSLocalizedString("ShopTimerRotationInfo", comment: "The shop refreshes every day. Check back soon!")
    }
...
        static let introduced = NSLocalizedString("BattlePassItemsParametersIntroduced", comment: "Introduced")
        static let set = NSLocalizedString("BattlePassItemsParametersSet", comment: "Set")
        static let beginDate = NSLocalizedString("BattlePassItemsParametersBeginDate", comment: "Start date")
        static let endDate = NSLocalizedString("BattlePassItemsParametersEndDate", comment: "End date")
        static let currentSeason = NSLocalizedString("BattlePassItemsParametersCurrentSeason", comment: "Currently underway")
        
...
        static let progressFirst = NSLocalizedString("StatsPageProgressFirst", comment: "Current Season")
        static let progressSecond = NSLocalizedString("StatsPageProgressSecond", comment: "Current Level")
        static let globalTitle = NSLocalizedString("StatsPageGlobalTitle", comment: "Global")
        static let globalFirst = NSLocalizedString("StatsPageGlobalFirst", comment: "Top 1 Places")
        static let globalSecond = NSLocalizedString("StatsPageGlobalSecond", comment: "Kills Deaths")
...
    /// Contains localized texts for the Nickname popup in the Stats module
    enum NicknamePopup {
        static let placeholder = NSLocalizedString("NicknamePopupPlaceholder", comment: "Nickname")
        static let xbox = "Xbox"
        static let epic = "Epic"
        static let psn = "PSN"
        static let accept = NSLocalizedString("NicknamePopupAccept", comment: "Accept")
        static let cancel = NSLocalizedString("NicknamePopupCancel", comment: "Cancel")
        static let noResult = NSLocalizedString("NicknamePopupNoResult", comment: "No result")
...
